Fixed the navigation bar in the recipe html as it was covering the search bar. Added footer to recipe html. Updating the styling of the cards

--- a/style.css
+++ b/style.css
@@ -5,10 +5,11 @@
   }
 
   body { 
-    font-family: sans-serif;
+    font-family: sans-serif !important;
     max-height: 100%;
     overflow:auto;
     scroll-behavior: smooth;
+    overflow-y: auto !important;
   }
 
   ::-webkit-scrollbar { 
@@ -70,7 +71,7 @@
   background-color: #5DB075;
   border-bottom: #5ea572 2px solid;
   overflow: hidden;
-  position: fixed;
+  position: fixed !important;
   top: 0px;
   width: 100%;
   z-index: 1;
@@ -93,6 +94,9 @@ a{
   margin-top: 20px;
 }
 
+#search-bar{
+  margin-top: 120px;
+}
 #search-button{
   background-color:#5DB075 ;
   color: white;
@@ -144,12 +148,17 @@ a{
 }
 
 
-.nutrional-form{
+.nutritional-form{
   display: block;
   margin-left: auto;
   margin-right: auto;
   width: 700px;
   height: 300px;
+}
+
+#nutritional-card{
+  border-style: none !important;
+  box-shadow: none !important;
 }
 
 #logo2{
@@ -167,7 +176,7 @@ a{
   justify-content: center;
   flex-wrap: wrap;
 }
-.recipe-card{
+/* .recipe-card{
   background-color: #4E7597;
   border-radius: 5px;
   height: 300px;
@@ -176,7 +185,7 @@ a{
   padding-top: 5px;
   margin-top: 15px;
   box-shadow: 4px 5px 15px #00000083;
-}
+} */
 
 li {
   list-style: none; 
@@ -224,10 +233,14 @@ ul{
 
 .grid-container{
   margin-top: 30px !important;
+
+
   /* margin: 0 auto;
   display: grid; */
   
 }
+
+
 
 /* #recipe-cards{
   display: grid;
@@ -237,12 +250,19 @@ ul{
 .card{
   
   margin: 10px;
-  padding: 15px;
+  /* padding: 15px; */
   border: 1px solid #c9c9c9;
   border-radius: 7px;
   box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   
 }
 
+.card img{
+  border-bottom: 1px solid #c9c9c9;;
+}
+#footer-border{
+ margin-top: 40px;
+  border-top: 2px solid #5b5d5f;
+}
 
 
